<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"


    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usernameinput"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:ems="10"
            android:hint="Enter email address"
            android:inputType="textEmailAddress"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorHint="@color/common_google_signin_btn_text_dark_default" />

        <EditText
            android:id="@+id/passwrodinput"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="numberPassword"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorHint="@color/common_google_signin_btn_text_dark_default" />
        <EditText
            android:id="@+id/confirmpasswrodinput"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:hint="Confirm password"
            android:inputType="numberPassword"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorHint="@color/common_google_signin_btn_text_dark_default" />


        <Button
            android:id="@+id/registerbutton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:text="@string/register"
            android:layout_marginTop="5dp"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

        <TextView
            android:id="@+id/statusTV"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status" />


    </LinearLayout>


</LinearLayout>