<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_tools">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.finalyear.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_user_profile"
            app:destination="@id/user_profile" />
        <action
            android:id="@+id/action_nav_home_to_diet_panel"
            app:destination="@id/diet_panel" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.finalyear.ui.doctors_gallery.GalleryFragment"

        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.finalyear.ui.Medicine_gallery.SlideshowFragment"

        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.finalyear.ui.Login.LoginFragment"

        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_tools_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.finalyear.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.finalyear.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/user_profile"
        android:name="com.example.finalyear.ui.User_profile.User_profile"
        android:label="fragment_user_profile"
        tools:layout="@layout/fragment_user_profile" />
    <fragment
        android:id="@+id/diet_panel"
        android:name="com.example.finalyear.Diet_panel"
        android:label="fragment_diet_panel"
        tools:layout="@layout/fragment_diet_panel" >
        <action
            android:id="@+id/action_diet_panel_to_diet_Plan"
            app:destination="@id/diet_Plan" />
        <action
            android:id="@+id/action_diet_panel_to_diet_details2"
            app:destination="@id/diet_details" />
    </fragment>
    <fragment
        android:id="@+id/diet_Suggesiton"
        android:name="com.example.finalyear.Diet_Suggesiton"
        android:label="fragment_diet__suggesiton"
        tools:layout="@layout/fragment_diet__suggesiton" />
    <fragment
        android:id="@+id/diet_Plan"
        android:name="com.example.finalyear.Diet_Plan"
        android:label="fragment_diet__plan"
        tools:layout="@layout/fragment_diet__plan" >
        <action
            android:id="@+id/action_diet_Plan_to_diet_panel"
            app:destination="@id/diet_panel" />
    </fragment>
    <fragment
        android:id="@+id/diet_details"
        android:name="com.example.finalyear.Diet_details"
        android:label="fragment_diet_details"
        tools:layout="@layout/fragment_diet_details" />
</navigation>